[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kangHunt_base_v1"
version = "1.1.0"
description = "Advanced Modular OSINT Framework with integrated GHunt v2.3.4"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Syed Kashaf", email = "syedkashaf2@gmail.com"}
]
readme = "README.md"
keywords = [
    "osint",
    "reconnaissance",
    "intelligence",
    "email-investigation",
    "google-osint",
    "ghunt",
    "security-research"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Utilities"
]

[project.urls]
"Homepage" = "https://github.com/Syedkashaf/kangHunt_base_v1"
"Bug Reports" = "https://github.com/Syedkashaf/kangHunt_base_v1/issues"
"Documentation" = "https://github.com/Syedkashaf/kangHunt_base_v1/wiki"
"Source" = "https://github.com/Syedkashaf/kangHunt_base_v1"

[tool.poetry]
name = "kangHunt_base_v1"
version = "1.1.0"
description = "Advanced Modular OSINT Framework with integrated GHunt"
authors = ["Syed Kashaf <syedkashaf2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
httpx = {extras = ["http2"], version = "^0.27.2"}
geopy = "^2.4.1"
imagehash = "^4.3.1"
pillow = "^12.1.0"
python-dateutil = "^2.9.0.post0"
rich = "^13.9.1"
beautifultable = "^1.1.0"
beautifulsoup4 = "^4.12.3"
alive-progress = "^3.1.5"
protobuf = "^5.28.2"
autoslot = "^2022.12.1"
humanize = "^4.10.0"
inflection = "^0.5.1"
jsonpickle = "^3.3.0"
packaging = "^24.1"
rich-argparse = "^1.5.2"
dnspython = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
